--- a/index.html
+++ b/index.html
@@ -3,32 +3,43 @@
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
+    <style>
+      div{
+        border: 1px solid black; margin: 2px
+      }
+      a{
+        color: blue;
+      }
+      div a{
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <h1>I'm an h1</h1>
     <ul>
       <li>
-        <a href="http://example.com/" style="color: red;">Link</a>
+        <a href="http://example.com/">Link</a>
       </li>
       <li>
-        <a href="http://example.com/" style="color: red;">Link</a>
+        <a href="http://example.com/">Link</a>
       </li>
       <li>
-        <a href="http://example.com/" style="color: red;">Link</a>
+        <a href="http://example.com/">Link</a>
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div style="border: 1px solid black; margin: 2px">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div id ="exec-bio" class="bio-box">
+      <a href="http://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black; margin: 2px">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box">
+      <a href="http://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black; margin: 2px">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box">
+      <a href="http://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black; margin: 2px">
-      <a href="http://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box">
+      <a href="http://example.com/">I'm a link</a>
     </div>
   </body>
 </html>
