introducing IDs and Class

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       div a{
         color: red;
       }
+      #exec-bio{
+        background-color: lightgrey;
+      }
+      .bio-box{
+        border: 1px solid black;
+      }
+      .bio-box a{
+        color: green
+      }
     </style>
   </head>
   <body>
